# aic_quant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: alpaca_eda_examples.ipynb  alpaca_quickstart.ipynb
notebooks/.ipynb_checkpoints/: alpaca_quickstart-checkpoint.ipynb
src/aic/: __init__.py  alpaca_research.py
tests/: test_alpaca_research.py
