[project]
name = "aic"
version = "0.1.0"
description = "Notebook-friendly research helpers for Alpaca market data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.0",
    "notebook>=7.6.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aic"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
